--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
@@ -13,37 +13,21 @@
 
 <LoadingIndicator @ref="loading" FullScreen FadeIn>
 <div class="row">
-    <div class="col-6">
+    <div class="col-4">
         <h3>@L["GroupBuyList"]</h3>
     </div>
-    <div class="col-6 text-lg-end">
-        <div class="custom-check-group me-1">
+    <div class="col-8 text-lg-end">
+            <div class="custom-check-group me-1">
             <input type="checkbox" class="form-check-input" checked="@IsAllSelected" @onchange="HandleSelectAllChange"></input>
             <Label Class="form-label">@L["SelectAll"]</Label>
         </div>
-       
-
-                <Button Type="@ButtonType.Button" Class="btn btn-sm btn-primary" Clicked="CreateNewItem">
+          <Button Type="@ButtonType.Button" Class="btn btn-sm btn-primary" Clicked="CreateNewItem">
                     <i class="fa fa-plus"></i>
                     @L["NewGroupBuy"]
                 </Button>
-
-           
-         
-             @if (GroupBuyListItem.Count(x => x.IsSelected == true) == 1)
-            {
-                <Button Type="@ButtonType.Button" Clicked="CopyAsync" Class="btn btn-sm btn-primary">
-                <i class="fa fa-plus"></i>
-                @L["CopyGroupBuy"]
-                 </Button>
-            }
-            else
-            {
-                <Button Disabled Type="@ButtonType.Button" Class="btn btn-sm btn-primary">
-                     <i class="fa fa-plus"></i>
-                     @L["CopyGroupBuy"]
-                 </Button>
-            }
+            <Button Color="Color.Secondary" Size="Size.Small" Clicked="CopyAsync" Disabled="@(GroupBuyListItem.Count(x => x.IsSelected) != 1)">
+                @L["Copy"]
+            </Button>
             <Button Type="@ButtonType.Button" Class="btn btn-sm btn-danger" Clicked="DeleteSelectedAsync">
             @L["DeleteSelected"]
         </Button>
