--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -48,6 +48,7 @@
     box-sizing: border-box;
     padding: 6px 10px;
     margin-right: 5px;
+    margin-top: 10px;
     font-size: small;
     background-color: #355dff !important
 }
