Seeder For Shipment Method

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
@@ -15,11 +15,11 @@
 
 <LoadingIndicator @ref="loading" FullScreen FadeIn>
 <div class="row">
-    <div class="col-3">
+    <div class="col-4">
         <h3>@L["GroupBuyList"]</h3>
     </div>
         <div Class="col-3 text-lg-end">
-            <div class="input-group">
+            <div class="input-group" style="margin-left: 40px;">
             <Autocomplete Size="Size.Small" TItem="KeyValueDto"
                           TValue="Guid?"
                           Data="@ItemsList"
@@ -40,7 +40,7 @@
              </Button>
              </div>
          </div>
-    <div class="col-6 text-lg-end">
+    <div class="col-5">
 
          
 
