--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -559,22 +559,56 @@
                                     @foreach(var selectedItem in module.Selected)
                                     {
                                         <div class="col-@(12 / module.Selected.Count)">
-                                            <Autocomplete 
-                                                        TItem="ItemWithItemTypeDto"
-                                                        TValue="Guid?"
-                                                        Data="@ItemsList"
-                                                        TextField="@(( item ) => item.Name)"
-                                                        ValueField="@(( item ) => item.Id)"
-                                                        Placeholder="Search..."
-                                                        Filter="AutocompleteFilter.StartsWith"
-                                                        CustomFilter="@(( item, searchValue ) => item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
-                                                        HighlightSearch
-                                                        Immediate="true"
-                                                        SelectedValue="selectedItem.Id"
-                                                        SelectedValueChanged="(id) => OnSelectedValueChanged(id, module, selectedItem)">
-                                                    <NotFoundContent> @L["NotFound"] </NotFoundContent>
-                                            </Autocomplete>
-                                            @if (selectedItem.Id != null)
+                                            @if(module.GroupBuyModuleType == GroupBuyModuleType.IndexAnchor)
+                                            {
+                                                @if(selectedItem.IsEdit || selectedItem.Name.IsNullOrEmpty())
+                                                {
+                                                    <Autocomplete 
+                                                                TItem="ItemWithItemTypeDto"
+                                                                TValue="Guid?"
+                                                                Data="@ItemsList"
+                                                                TextField="@(( item ) => item.Name)"
+                                                                ValueField="@(( item ) => item.Id)"
+                                                                Placeholder="Search..."
+                                                                Filter="AutocompleteFilter.StartsWith"
+                                                                CustomFilter="@(( item, searchValue ) => item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
+                                                                HighlightSearch
+                                                                Immediate="true"
+                                                                SelectedValue="selectedItem.Id"
+                                                                @bind-SelectedText="@selectedItem.Name"
+                                                                SelectedValueChanged="(id) => OnSelectedValueChanged(id, module, selectedItem)"
+                                                                FreeTyping>
+                                                            <NotFoundContent> @L["NotFound"] </NotFoundContent>
+                                                    </Autocomplete>
+                                                }
+                                                @if(selectedItem.Id == Guid.Empty)
+                                                {
+                                                    <h4 class="p-2 d-inline-block">@selectedItem.Name</h4>
+                                                    @if (!selectedItem.Name.IsNullOrEmpty())
+                                                    {
+                                                        <i class="text-info cursor-pointer fa fa-pencil" @onclick="() => EditIndexAnchor(module)"></i>
+                                                    }
+                                                }
+                                            }
+                                            else
+                                            {
+                                                <Autocomplete 
+                                                            TItem="ItemWithItemTypeDto"
+                                                            TValue="Guid?"
+                                                            Data="@ItemsList"
+                                                            TextField="@(( item ) => item.Name)"
+                                                            ValueField="@(( item ) => item.Id)"
+                                                            Placeholder="Search..."
+                                                            Filter="AutocompleteFilter.StartsWith"
+                                                            CustomFilter="@(( item, searchValue ) => item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
+                                                            HighlightSearch
+                                                            Immediate="true"
+                                                            SelectedValue="selectedItem.Id"
+                                                            SelectedValueChanged="(id) => OnSelectedValueChanged(id, module, selectedItem)">
+                                                        <NotFoundContent> @L["NotFound"] </NotFoundContent>
+                                                </Autocomplete>
+                                            }
+                                            @if (selectedItem.Id != Guid.Empty)
                                             {
                                                 string? firstImage;
                                                 if (selectedItem.ItemType==ItemType.Item)
