--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -561,26 +561,23 @@
                                         <div class="col-@(12 / module.Selected.Count)">
                                             @if(module.GroupBuyModuleType == GroupBuyModuleType.IndexAnchor)
                                             {
-                                                @if(selectedItem.IsEdit || selectedItem.Name.IsNullOrEmpty())
-                                                {
-                                                    <Autocomplete 
-                                                                TItem="ItemWithItemTypeDto"
-                                                                TValue="Guid?"
-                                                                Data="@ItemsList"
-                                                                TextField="@(( item ) => item.Name)"
-                                                                ValueField="@(( item ) => item.Id)"
-                                                                Placeholder="Search..."
-                                                                Filter="AutocompleteFilter.StartsWith"
-                                                                CustomFilter="@(( item, searchValue ) => item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
-                                                                HighlightSearch
-                                                                Immediate="true"
-                                                                SelectedValue="selectedItem.Id"
-                                                                @bind-SelectedText="@selectedItem.Name"
-                                                                SelectedValueChanged="(id) => OnSelectedValueChanged(id, module, selectedItem)"
-                                                                FreeTyping>
-                                                            <NotFoundContent> @L["NotFound"] </NotFoundContent>
-                                                    </Autocomplete>
-                                                }
+                                                <Autocomplete 
+                                                            TItem="ItemWithItemTypeDto"
+                                                            TValue="Guid?"
+                                                            Data="@ItemsList.Where(x => x.ItemType == ItemType.Item)"
+                                                            TextField="@(( item ) => item.Name)"
+                                                            ValueField="@(( item ) => item.Id)"
+                                                            Placeholder="Search..."
+                                                            Filter="AutocompleteFilter.StartsWith"
+                                                            CustomFilter="@(( item, searchValue ) => item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
+                                                            HighlightSearch
+                                                            Immediate="true"
+                                                            SelectedValue="selectedItem.Id"
+                                                            @bind-SelectedText="@selectedItem.Name"
+                                                            SelectedValueChanged="(id) => OnSelectedValueChanged(id, module, selectedItem)"
+                                                            FreeTyping>
+                                                        <NotFoundContent> @L["NotFound"] </NotFoundContent>
+                                                </Autocomplete>
                                                 @if(selectedItem.Id == Guid.Empty)
                                                 {
                                                     <h4 class="p-2 d-inline-block">@selectedItem.Name</h4>
