--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
@@ -40,12 +40,8 @@
              </Button>
              </div>
          </div>
-    <div class="col-5">
-
-         
-
-
-            <div class="custom-check-group me-1">
+    <div class="col-5 text-end">
+        <div class="custom-check-group me-1">
             <input type="checkbox" class="form-check-input" checked="@IsAllSelected" @onchange="HandleSelectAllChange"></input>
             <Label Class="form-label">@L["SelectAll"]</Label>
         </div>
