--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -50,5 +50,5 @@
     </div>
 
     <abp-script-bundle name="@BlazorLeptonXLiteThemeBundles.Scripts.Global" />
-
+    <script src="~/fileDownload.js"></script>
 </body>
