--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -9,7 +9,6 @@
 @using System.ComponentModel;
 @using Blazorise.Components;
 
-
 @inject IGroupBuyAppService AppService
 @inject NavigationManager NavigationManager
 @inject IStringLocalizer<PikachuResource> L
@@ -616,7 +615,7 @@
                                                     <div class="d-flex mt-3">
                                                         @if(firstImage != null)
                                                         {
-                                                            <div>
+                                                            <div class="col-12 text-center">
                                                                 <img src="@firstImage" class="img-fluid" />
                                                                 @if(module.GroupBuyModuleType == GroupBuyModuleType.ProductGroupModule)
                                                                 {
@@ -626,37 +625,38 @@
                                                                         </h4>
                                                                         @if (selectedItem.Item != null)
                                                                         {
-                                                                            @if (!selectedItem.Item.Attribute1Name.IsNullOrEmpty() && selectedItem.Item.ItemDetails != null)
+                                                                            var itemDetails = selectedItem.Item?.ItemDetails;
+                                                                            @if (itemDetails != null && itemDetails.Where(x => x.Attribute1Value != null).Count() > 0)
                                                                             {
                                                                                 <div class="mt-2">
                                                                                     <select class="form-control dropdown">
-                                                                                        @foreach (var item in selectedItem.Item?.ItemDetails.DistinctBy(i => i.Attribute1Value))
+                                                                                        @foreach (var item in itemDetails.DistinctBy(i => i.Attribute1Value))
                                                                                         {
                                                                                             <option>
                                                                                                 @item.Attribute1Value
                                                                                             </option>
                                                                                         }
-                                                                                    </select class="form-control dropdown">
+                                                                                    </select>
                                                                                 </div>
                                                                             }
-                                                                            @if (!selectedItem.Item.Attribute2Name.IsNullOrEmpty() && selectedItem.Item.ItemDetails != null)
+                                                                            @if (itemDetails != null && itemDetails.Where(x => x.Attribute2Value != null).Count() > 0)
                                                                             {
                                                                                 <div class="mt-2">
                                                                                     <select class="form-control dropdown">
-                                                                                        @foreach (var item in selectedItem.Item?.ItemDetails.DistinctBy(i => i.Attribute2Value))
+                                                                                        @foreach (var item in itemDetails.DistinctBy(i => i.Attribute2Value))
                                                                                         {
                                                                                             <option>
                                                                                                 @item.Attribute2Value
                                                                                             </option>
                                                                                         }
-                                                                                    </select class="form-control dropdown">
+                                                                                    </select>
                                                                                 </div>
                                                                             }
-                                                                            @if (!selectedItem.Item.Attribute3Name.IsNullOrEmpty() && selectedItem.Item.ItemDetails != null)
+                                                                            @if (itemDetails != null && itemDetails.Where(x => x.Attribute3Value != null).Count() > 0)
                                                                             {
                                                                                 <div class="mt-2">
                                                                                     <select class="form-control dropdown">
-                                                                                        @foreach (var item in selectedItem.Item?.ItemDetails.DistinctBy(i => i.Attribute3Value))
+                                                                                        @foreach (var item in itemDetails.DistinctBy(i => i.Attribute3Value))
                                                                                         {
                                                                                             <option>
                                                                                                 @item.Attribute3Value
