--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -14,7 +14,9 @@
 @inject IUiMessageService _uiMessageService;
 @inject IOrderAppService _orderAppService;
 @inject IGroupBuyAppService _groupBuyAppService;
+@using Microsoft.JSInterop;
 @inject IJSRuntime JSRuntime;
+
 <LoadingIndicator @ref="loading" FullScreen FadeIn>
     <div class="row">
         <div class="col-1">
@@ -193,31 +195,7 @@
         </CardBody>
     </Card>
 </LoadingIndicator>
-<script>
-    window.removeSelectClass = function (elementId) {
-        var element = document.getElementById(elementId);
-        if (element) {
-            element.classList.remove("form-select");
-        }
-    };
-    window.removeInputClass = function (elementId) {
-        var element = document.getElementById(elementId);
-        if (element) {
-            element.classList.remove("form-control");
-        }
-    };
-    window.downloadFile = function (data) {
-        debugger;
-        var blob = new Blob([new Uint8Array(data.byteArray)], { type: data.contentType });
-        var url = window.URL.createObjectURL(blob);
-        var a = document.createElement('a');
-        a.href = url;
-        a.download = data.fileName;
-        document.body.appendChild(a);
-        a.click();
-        window.URL.revokeObjectURL(url);
-    }
-</script>
+
 @code {
     bool isSmall = true;
 }
