--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -51,4 +51,5 @@
 
     <abp-script-bundle name="@BlazorLeptonXLiteThemeBundles.Scripts.Global" />
     <script src="~/fileDownload.js"></script>
+    <script src="~/order.js"></script>
 </body>
