--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -3,6 +3,7 @@
 @using Kooco.Pikachu.Localization;
 @using Kooco.Pikachu.OrderItems;
 @using Kooco.Pikachu.Orders;
+@using Kooco.Pikachu.OrderDeliveries;
 @using Kooco.Pikachu.Refunds;
 @using Microsoft.Extensions.Localization;
 @using Blazorise;
@@ -16,6 +17,7 @@
 @inject IUiMessageService _uiMessageService;
 @inject IOrderAppService _orderAppService;
 @inject IRefundAppService _refundAppService;
+@inject IOrderDeliveryAppService _orderDeliveryAppService;
 @inject ICurrentUser CurrentUser;
 @inject IModalService ModalService;
 <style>
@@ -354,11 +356,13 @@
         </div>
     </div>
 
+   
     <div class="row">
-        <div class="col-6">
-            <h4 class="d-inline-block">@L["OrderItems"]</h4>
-        </div>
-        <div class="col-6 text-end">
+        
+            <div class="col-6">
+                <h4 class="d-inline-block">@L["OrderItems"]</h4>
+            </div>
+                    <div class="col-6 text-end">
             @if (IsItemsEditMode)
             {
                 <Button Type="ButtonType.Button" Class="btn btn-sm btn-danger" Clicked="CancelOrderItemChanges">
@@ -377,7 +381,7 @@
                 </Button>
             }
         </div>
-        <div class="col-12">
+      <div class="col-12">
             <Card>
                 <CardBody>
                     <table class="table table-responsive table-striped text-center">
@@ -500,6 +504,194 @@
                             }
                         </tbody>
                     </table>
+                </CardBody>
+            </Card>
+        </div>
+    </div>
+     <div class="row">
+        <div class="col-6">
+            <h4 class="d-inline-block">@L["Order Deliveries"]</h4>
+        </div>
+
+        <div class="col-12">
+            <Card>
+                <CardBody>
+                    <DataGrid TItem="OrderDeliveryDto"
+                      Data="@OrderDeliveries"
+                      @bind-SelectedRow="@SelectedOrder"
+                      
+                      
+                      DetailRowTrigger="@((e) => e.Item.Items?.Count > 0 && e.Item.Id == SelectedOrder?.Id)"
+                      Responsive
+                       
+                       RowClicked="ToggleRow"
+                      
+                    >
+                 <DataGridColumns>
+                     <DataGridCommandColumn />
+                     
+                     <DataGridColumn Field="@nameof(OrderDeliveryDto.DeliveryNo)" Caption="@L["DeliveryNo"]">
+                         <DisplayTemplate>
+                             @{
+                                var isExpanded = ExpandedRows.Contains(context.Id);
+                                var chevronClass = isExpanded ? "fa fa-caret-up" : "fa fa-caret-down";
+                            }
+                            <i class="@chevronClass"></i>
+                            @context.DeliveryNo
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                   
+                    <DataGridColumn Field="@nameof(OrderDeliveryDto.DeliveryMethod)" Caption="@L["DeliveryMethod"]" />
+                    <DataGridColumn Field="@nameof(OrderDeliveryDto.DeliveryStatus)" Caption="@L["DeliveryStatus"]">
+                        <DisplayTemplate>
+                            @context.DeliveryStatus.ToString()
+                        </DisplayTemplate>
+                     
+                    </DataGridColumn>
+                     <DataGridColumn  Caption="@L["DeliveryTemperature"]" >
+                        <DisplayTemplate>
+                            @context.Items[0].DeliveryTemperature
+                        </DisplayTemplate>
+                       </DataGridColumn>
+                 
+                    <DataGridColumn TextAlignment="TextAlignment.Center" Field="@nameof(OrderDeliveryDto.CarrierId)" Caption="@L["Carrier"]">
+                        <DisplayTemplate>
+                             
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                </DataGridColumns>
+                <DetailRowTemplate>
+                 
+                       
+                       <table class="table table-responsive table-striped text-center">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                
+                                 <th>@L["Temperature"]</th>
+                                  <th>@L["Delivery Cost"]</th>
+                                <th>@L["Quantity"]</th>
+                                <th>@L["UnitPrice"]</th>
+                                <th>@L["Subtotal"]</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @if (context.Items != null && context.Items != null)
+                            {
+                                @foreach (var item in context.Items)
+                                {
+                                    <tr>
+                                      
+                                        <td class="text-start" style="width: 50%;">
+                                            @if (item.ItemType == ItemType.Item)
+                                            {
+                                                var firstImage = item.Item?.Images?.FirstOrDefault()?.ImageUrl;
+                                                @if (!string.IsNullOrEmpty(firstImage))
+                                                {
+                                                    <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                }
+                                                @item.Item?.ItemName
+                                            }
+
+                                            @if (item.ItemType == ItemType.SetItem)
+                                            {
+                                                var firstImage = item.SetItem?.Images?.FirstOrDefault()?.ImageUrl;
+                                                @if (!string.IsNullOrEmpty(firstImage))
+                                                {
+                                                    <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                }
+                                                @item.SetItem?.SetItemName
+                                            }
+
+                                            @if (item.ItemType == ItemType.Freebie)
+                                            {
+                                                var firstImage = item.Freebie?.Images?.FirstOrDefault()?.ImageUrl;
+                                                @if (!string.IsNullOrEmpty(firstImage))
+                                                {
+                                                    <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                }
+                                                @item.Freebie?.ItemName
+                                            }
+
+                                        </td>
+                                        @if (item.IsSelected && IsItemsEditMode)
+                                        {
+                                            var thisItem = EditingItems.FirstOrDefault(e => e.Id == item.Id);
+                                            @if (thisItem != null)
+                                            {
+                                                <td>
+                                                    <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsQuantiyError ? "invalid" : "")" @bind-value="thisItem.Quantity" @onblur="() => CalculateTotal(thisItem)" />
+                                                </td>
+                                                <td>
+                                                    <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsItemPriceError ? "invalid" : "")" @bind-value="thisItem.ItemPrice" @onblur="() => CalculateTotal(thisItem)" />
+                                                </td>
+                                                <td>
+                                                    $@thisItem.TotalAmount.ToString("N2")
+                                                </td>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <td>
+                                                @item.DeliveryTemperature
+                                            </td>
+                                            <td>
+                                                @item.DeliveryTemperatureCost
+                                            </td>
+                                            <td>
+                                                @item.Quantity
+                                            </td>
+                                            <td>
+                                                <span>$@item.ItemPrice.ToString("N2")</span>
+                                            </td>
+                                            <td>
+                                                $@item.TotalAmount.ToString("N2")
+                                            </td>
+                                        }
+                                    </tr>
+                                }
+                            @*     <tr>
+                                    <td colspan="2" class="text-end">
+                                        @L["Subtotal"]
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                        $@Order.TotalAmount.ToString("N2")
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2" class="text-end">
+                                        @L["DeliveryFee"]
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                        -
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2" class="text-end">
+                                        @L["Total"]
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                        $@Order.TotalAmount.ToString("N2")
+                                    </td>
+                                </tr> *@
+                            }
+                        </tbody>
+                    </table>
+                    
+                </DetailRowTemplate>
+            </DataGrid>
                 </CardBody>
             </Card>
         </div>
