enterprise purchase functionality

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -448,6 +448,11 @@
         </div>
         <div class="row">
             <div class="col-2"></div>
+            <div class="col-2 form-label">@L["EnterprisePurchase"]</div>
+            <div class="col-4"> <Switch TValue="bool" @bind-Checked="@CreateGroupBuyDto.IsEnterprise"></Switch></div>
+        </div>
+        <div class="row">
+            <div class="col-2"></div>
             <div class="col-2">
                 <label>@L["InviteCode"]</label>
             </div>
